--- a/templates/etc/ssh/sshd_config.j2
+++ b/templates/etc/ssh/sshd_config.j2
@@ -8,6 +8,8 @@ AllowUsers {{ sshd_allow_users }}
 AllowTcpForwarding {{ sshd_allow_tcp_forwarding }}
 AuthenticationMethods {{ sshd_authentication_methods }}
 Banner {{ sshd_banner }}
+AuthorizedPrincipalsFile {{ sshd_authorized_principal_file }}
+TrustedUserCAKeys {{ sshd_trusted_user_ca_keys_file }}
 ChallengeResponseAuthentication {{ sshd_challenge_response_authentication }}
 Ciphers {{ sshd_ciphers | replace(', ', ',') }}
 ClientAliveCountMax {{ sshd_client_alive_count_max | int }}
